Quick style fix with blurring

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ canvas {
 }
 
 body {
-  background:#262626;
+  background: black;
 }
 
 main {
